--- a/VAE_v1_1.ipynb
+++ b/VAE_v1_1.ipynb
@@ -238,11 +238,12 @@
       },
       "source": [
         "### For better understanding visit: https://towardsdatascience.com/autoencoders-for-the-compression-of-stock-market-data-28e8c1a2da3e\n",
+        "### For better understanding of layers and Recreating auto encoders visit: https://machinelearningmastery.com/lstm-autoencoders/\n",
         "### or for code: https://gist.github.com/GerardBCN/40349b39bc45d4550141aff6966d1619#file-stock_price_autoencoding-ipynb\n",
         "### For Reshaping Issues: https://machinelearningmastery.com/reshape-input-data-long-short-term-memory-networks-keras/\n",
         "\n",
         "### fit model\n",
-        "encoding_dim = 3\n",
+        "encoding_dim = 100\n",
         "epochs = 50\n",
         "\n",
         "### define model\n",
@@ -250,8 +251,8 @@
         "encoded = layers.LSTM(encoding_dim, activation='tanh', name='Encode_1')(inputs)\n",
         "\n",
         "decoded = layers.RepeatVector(n_train, name='Bootleneck')(encoded)\n",
-        "decoded = layers.LSTM(3, return_sequences=True, activation='tanh', name='Decode_1')(decoded)\n",
-        "decoded = TimeDistributed(Dense(140, activation='tanh'),name='Output_Layer')(decoded)\n",
+        "decoded = layers.LSTM(encoding_dim, return_sequences=True, activation='tanh', name='Decode_1')(decoded)\n",
+        "decoded = TimeDistributed(Dense(140, activation='tanh', name=''),name='Output_Layer')(decoded)\n",
         "\n",
         "sequence_autoencoder = keras.Model(inputs, decoded)\n",
         "encoder = keras.Model(inputs, encoded)\n",
@@ -291,7 +292,27 @@
         "id": "AwjUjaCtkSpW"
       },
       "source": [
-        ""
+        "# Test if Input fits Dim of Output\n",
+        "print(x_train.shape)\n",
+        "print(decoded_ecg5000.shape)\n",
+        "\n",
+        "print(x_train)\n",
+        "print(decoded_ecg5000)\n",
+        "\n",
+        "# covert to 2D DataFrame and only show column 0\n",
+        "new_x_train= x_train.reshape(-1,140)\n",
+        "new_x_train = pd.DataFrame(new_x_train)\n",
+        "new_x_train = new_x_train.iloc[:, 0:1]\n",
+        "print(new_x_train.head(10))\n",
+        "\n",
+        "new_decoded_ecg5000 = decoded_ecg5000.reshape(-1,140)\n",
+        "new_decoded_ecg5000 = pd.DataFrame(new_decoded_ecg5000)\n",
+        "new_decoded_ecg5000 = new_decoded_ecg5000.iloc[:, 0:1]\n",
+        "print(new_decoded_ecg5000.head(10))\n",
+        "\n",
+        "# plot result\n",
+        "ax = new_x_train.plot()\n",
+        "new_decoded_ecg5000.plot(ax=ax, linewidth = 1, figsize=(25,6), title='Autoencoder Result')"
       ],
       "execution_count": null,
       "outputs": []
